<resources>
    <string name="app_name">MealDiary</string>

    <string name="cancel">취소</string>

    <string name="permission_storage_message">저장소 권한이 거부되어 있습니다. 앱 환경설정에서 권한을 허용해주세요."</string>
    <string name="permission_dialog_rational_title">권한요청</string>
    <string name="permission_dialog_rational_positive_text">환경설정 바로가기</string>
    <string name="photo_title">먹은 음식 사진을 골라줘</string>
    <string name="next">다음</string>
    <string name="skip">Skip</string>
    <string name="restaurant_title">어디서 먹었어?</string>
    <string name="note_title">적는게 남는거야</string>
    <string name="hint_restaurant">식당이름</string>
    <string name="hint_title">제목</string>
    <string name="hint_content">식후감</string>
    <string name="hint_tag">#태그</string>
    <string name="score_title">오늘의 식사는</string>
    <string name="score_button_title">평가하기</string>
    <string name="score_text_label">점</string>

    <!--intro-->
    <string name="intro_privacy_agree">개인정보수집 및 이용동의 약관\n“안전결제 프리미엄 서비스(이하, ‘서비스’라 합니다.)”의 서비스 제공과 관련하여 “브이피 주식회사(이하, ‘회사’라 합니다.)”가 본인으로부터 취득한 개인정보는 통신비밀보호법, 전기통신사업법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률 등 정보통신서비스제공자가 준수하여야 할 관련 법령상의 개인정보보호 규정에 따라 제3자에 제공하거나 영업목적으로 이용 시 동의를 받아야 하는 정보입니다. 이에 본인은, 귀사가 본인으로부터 취득한 개인정보를 아래와 같은 목적으로 이용하거나 제휴업체에게 제공하는데 동의합니다. 회사는 본 서비스를 가입자에게 제공하기 위해 다음과 같이 개인정보를 수집/이용합니다.</string>
    <string name="intro_btn_agree">동의하고 사용할게요</string>
    <string name="intro_btn_next">다음</string>
    <string name="intro_skip">Skip</string>
    <string name="restaurant_not_found">검색한 식당이 없습니다.</string>
    <string name="restaurant_add">식당추가하기</string>

    <!--main-->
    <string name="main_title">먹고,\n적는게 남는거야.</string>
    <string name="main_add_contents">식후감</string>

    <!--board-->
    <string-array name="array_board_title">
        <item>맛집 리스트</item>
        <item>식사</item>
        <item>식후감</item>
    </string-array>
    <string-array name="array_board_subtitle">
        <item>나만의 맛집 리스트를 만들어보세요.</item>
        <item>맛있는 음식을 기억하고 싶으신가요?</item>
        <item>식후감을 작성하고 오랫동안 간직해 보세요.</item>
    </string-array>

    <!--detail-->
    <string name="detail_count">%1d/%2d</string>

    <!--sort-->
    <string name="sort_title">정렬 순서</string>
    <string name="sort_latest">최신순</string>
    <string name="sort_score">점수순</string>
    <string name="sort_distance">거리순</string>
    <string-array name="array_sort">
        <item>@string/sort_latest</item>
        <item>@string/sort_score</item>
        <item>@string/sort_distance</item>
    </string-array>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>

    <!-- score -->
    <string-array name="array_score_text">
        <item>다시는 안갈꺼야!!</item>
        <item>언젠가 인연이 되면 또 가겠지..</item>
        <item>먹을만.. 했다.</item>
        <item>보람찬 한 끼였다.</item>
        <item>뿌듯한 한 끼였다.</item>
        <item>드디어 인생 맛집을 찾았다!</item>
    </string-array>

    <string-array name="array_score_lottie_file_name">
        <item>lottie/score_zero_until_twenty.json</item>
        <item>lottie/score_twenty_until_forty.json</item>
        <item>lottie/score_forty_until_sixty.json</item>
        <item>lottie/score_sixty_until_eighty.json</item>
        <item>lottie/score_eighty_until_hundred.json</item>
        <item>lottie/score_hundred.json</item>
    </string-array>

</resources>
