<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.teamnexters.android.mealdiary.ui.write.note.NoteViewModel.ViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/highlight"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:alpha="0.6"
                android:background="@color/primary_orange"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/H324PtBlackBoldLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center_vertical"
                android:text="@string/note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_title"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.inputs.toTitle(text.toString())}"
            android:selection="@{viewModel.title.length}"
            android:text="@{viewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_title"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_tag"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_tag"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.inputs.toHashTagTextParam(text, start, before, count)}"
            android:text="@{viewModel.hashTag}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_title"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:hint="@string/hint_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="45dp"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.inputs.toContent(text.toString())}"
            android:selection="@{viewModel.content.length}"
            android:text="@{viewModel.content}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_tag"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
